2007-10-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpselection.c (gimp_selection_float): don't pop up a
	warning dialog if the selection is empty (bug #483896).
	
	* app/actions/select-commands.c (select_float_cmd_callback): use
	gimp_message() here in case that gimp_selection_float() fails.

2007-10-06  Manish Singh  <yosh@gimp.org>

	* configure.in: ditch stray "," character.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	corrected a mistake caused by a misinterpretation of the spec.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c (create_image): check that the
	window shape is non-empty before applying it to the alpha channel.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	support the new revision of the ICC Profiles In X specification
	which handles Xinerama setups.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: use the same size for all
	color buttons.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/perspective-shadow.scm: applied patch
	from Ulf-D. Ehlert with usability improvements (bug #482743).

2007-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mblur.c: restore compatibility by registering an
	extra procedure for the inward/outward parameter (bug #483426).

2007-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: allow to configure the
	out-of-gamut warning color.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* modules/colorsel_cmyk_lcms.c: always use the configured CMYK
	profile, regardless of the color management mode.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* app/plug-in/plug-in-menu-path.c (plug_in_menu_path_map):
	rewritten array handling to make the IRIX MIPSpro compiler happy
	(bug #483619).

2007-10-05  Sven Neumann  <sven@gimp.org>
